# languagelearning

./: .gitignore  .gitmodules  README.md
ADK/go/AgentTeam/: AGENTS.md  README.md  go.mod  go.sum  main.go  plan-20260513-1714.md  prompt
ADK/go/instructor_provider/: agent.go  go.mod  go.sum
ADK/go/loop_agent/: go.mod  go.sum  main.go
ADK/go/multisession-agent/: agent.go  agent.go.backup  curl_output.txt  go.mod  translate_sessions.sh
ADK/go/my-agent/: agent.go  go.mod
ADK/go/my-agent-gemini/: agent.go
ADK/go/my-agent-ollama/: .gitignore  README.md  agent.go  go.mod
ADK/python/agentTeamADK/: README.md  __init__.py  agent.py  cli.py  config.py  guards.py  pyproject.toml  tools.py
ADK/python/agentTeamADK/agent_team_adk.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
ADK/python/agentTeamADK/tests/: test_callbacks.py  test_config.py
ADK/webui/: plan-agent.md
ADK/webui/agent/: agent.go  go.mod  go.sum
bonsai/: README.md  aliases.sh  config.sh  env.sh  run-bonsai.sh  serve-bonsai.sh
bonsai/scripts/: query.sh  run.sh  serve.sh
custom_model/: README.md
custom_model/alibaba/: q3.5-4b  q35-2b-262k  q35-2b-32k  q35-2b-64k  q35-4b-262k  q35-4b-32k  q35-4b-64k
custom_model/google/: g4-e2b-131k  g4-e2b-32k  g4-e2b-64k  g4-e4b-131k  g4-e4b-64k  gemma4-e2b-optimized  gemma4-e4b-optimized  tg-4b-131k  tg-4b-32k  tg-4b-64k
custom_model/ibm/: g40-tiny-128k  g40-tiny-256k  g40-tiny-32k  g40-tiny-64k  g41-3b-131k  g41-3b-32k  g41-3b-64k
javascript/free-openai/: README.md  index.ts  package.json
(+31 files in other folders)
